# llm-forecasting-3be2-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: OUTLINE.md  main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: main_results.tex  paired_tests.tex  regime_summary.tex
paper_search_results/: LLM_forecasting_time_series_human_baseline_20260525_094606.jsonl  language_models_forecasting_geopolitical_events_human_forecasts_20260525_094556.jsonl  large_language_models_forecasting_humans_short-term_long-term_low-data_high-data_20260525_094518.jsonl
papers/: README.md
prompts/: forecast_prompt.txt
research_workspace/: __init__.py
results/: config.json
results/analysis/: calibration_table.csv  error_analysis_examples.csv  forecast_results.csv  metric_summary.csv  paired_tests.csv  selected_items.csv  summary.json
results/model_outputs/: 101_long__question_only.json  101_long__question_plus_history.json  107_long__question_only.json  (+118 more)
src/: analyze_results.py  forecasting_experiment.py
(+4 files in other folders)
